--- a/style.css
+++ b/style.css
@@ -3,12 +3,60 @@
 /* referentni:objekat,niz,funkcija */
 /* js je dinamicki programski jezik */
 
+*{
+    padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+}
+.myclass{
+    width: 100%;
+    height: 100vh;
+    background-color: green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.div1{
+    width: 100px;
+    height: 100px;
+    background-color: yellow;
+    position: relative;
+    animation-name: divin;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+}
 
 
 
 
-
-
+@keyframes divin {
+    0%{
+        top: 0;
+        left: 0;
+    }
+    20%{
+        left: 200px;
+        top: 0;
+    }
+    40%{
+        left: 200px;
+        top: 200px;
+    }
+    60%{
+        top: 200px;
+        left: 0;
+    }
+    80%{
+        top: 0;
+        left: 0;
+    }
+    100%{
+        left: 200px;
+        top: 0;
+    }
+    
+}
 
 
 
