finished todo app

--- a/vezbanje/style.css
+++ b/vezbanje/style.css
@@ -1,8 +1,8 @@
-/* Primitivni i referentni tipovi podataka */
+/* Primitivni i referentni tipovi podataka
 /* Primitivni: number, string, boolean,undefined,null,symbol*/
 /* referentni:objekat,niz,funkcija */
 /* js je dinamicki programski jezik */
-
+/* 
 *{
     padding: 0;
     box-sizing: border-box;
@@ -60,4 +60,6 @@
 
 
 
+ /* */ 
 
+ 
